# cortex

./: .gitignore  README.md  cortex_ui.js  cortex_ui.wasm  index.html
.github/workflows/: cmake-single-platform.yml
cortex/: CMakeLists.txt  README.md  pyproject.toml
cortex/src/: api.cpp  api.h  main.cpp  wbc_classifier.cpp  wbc_classifier.h  wbc_differential_api.cpp  wbc_differential_api.h  wbc_localizer.cpp  wbc_localizer.h
embedded/pulse_generator/: CMakeLists.txt  program.cpp  program.h  pulse_generator.ino
embedded/pulse_generator/tests/: program.cpp
model/: requirements.txt  scopenet.ipynb
model/scopenet/: config.py  dataset.py  loss.py  net.py  observer.py  optim.py  ssim.py  train.py  zstack.py
model/scopenet/observers/: onnx.py  tensorboard.py
model/tools/: train.py
services/app/: main.py
services/inference/: main.py  requirements.txt
services/rpi-camera/: main.py  pulse.py
services/sangaboard/: main.py
synth/: CMakeLists.txt  README.md
synth/src/: main.cpp
tasks/wbc_differential/: classification.py  localization.py  main.ipynb  main.py  requirements.txt  train.py
ui/: CMakeLists.txt  app.cpp  buffer.h  config.cpp  config.h  decoder.cpp  decoder.h  tool.cpp  tool.h  viewport.cpp  viewport.h
ui/shaders/: debayer.frag  debayer.vert
ui/src/: camera_widget.cpp  camera_widget.h  gallery_widget.cpp  gallery_widget.h  image.cpp  image.h  image_index.cpp  image_index.h  memory.cpp  memory.h  plot.h  sangaboard_widget.cpp  sangaboard_widget.h  task.h  task_browser.cpp  task_desktop.cpp  tool.cpp  tool.h  tools_widget.cpp  tools_widget.h  transfer.h  transfer_fake.cpp  transfer_real.cpp  visualizer.cpp  visualizer.h  white_balance.cpp  white_balance.h  white_balance_tool.cpp  white_balance_tool.h  widget.h
ui/tools/: focus_tool.cpp  focus_tool.h
webapp/: requirements.txt
webapp/app/: main.py  server.py
webapp/static/: index.html
