[build-system]
requires = ['scikit-build-core>=0.10']
build-backend = 'scikit_build_core.build'

[project]
name = 'cortex'
version = '0.1.0'
description = 'A library for analyzing microscope slides.'
readme = 'README.md'
requires-python = '>=3.8'
license = { text = 'MIT' }
authors = [{ name = 'Taylor Holberton', email = 'taylor.holberton@proton.me' }]
dependencies = [ 'numpy' ]
